tests/paczka1/fuzzy1/47542930.err
Error in line 14: ybVzhx A106 61,17
Error in line 10: Axd57r S152 14,1
Error in line 20: ybVzhx A106 296,8
Error in line 26: S152 S152 5,1
Error in line 31: S152 S509 80,7
Error in line 32: S152 A264 96,3
